--- a/Libya.html
+++ b/Libya.html
@@ -59,6 +59,6 @@ li a:hover {
   </ul>
         </body>
    
-     <img src="TaKNEE.svg" alt="poster">
+     <img src="TaKNEE.png" alt="poster">
    
 </html> 
