--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@ li a:hover {
         
         
     <ul>
-<li><a href="Libya.html">HOME </a></li>
+<li><a href="index.html">HOME </a></li>
 <li><a href="page2.html">ABOUT</a></li>
 <li><a href="page4.html">RESOURCES</a></li>
     <li><a href="page5.html">DONATION</a></li>
