--- a/page4.html
+++ b/page4.html
@@ -50,7 +50,7 @@ li a:hover {
     <body>
         
 <ul>
-<li><a href="Libya.html">HOME </a></li>
+<li><a href="index.html">HOME </a></li>
 <li><a href="page2.html">ABOUT</a></li>
   <li><a href="page4.html">RESOURCES</a></li>
     <li><a href="page5.html">DONATION</a></li>
