--- a/index.html
+++ b/index.html
@@ -60,5 +60,7 @@ li a:hover {
         </body>
    
      <img src="TaKNEE.png" alt="poster">
+    <img src="TaKNEE.png" alt="poster">
+    <img src="TaKNEE.png" alt="poster">
    
 </html> 
