--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@ li a:hover {
   </ul>
         </body>
    
-     <img src="TaKNEE.png" alt="poster">
-    <img src="TaKNEE.png" alt="poster">
-    <img src="TaKNEE.png" alt="poster">
-   
+     <img src="Wives.png" alt="poster">
+    
 </html> 
