--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@ li a:hover {
   </ul>
         </body>
    
-     <img src="Wives.png" alt="poster">
+     <img src="Wives-01.png" alt="poster">
     
 </html> 
