--- a/page5.html
+++ b/page5.html
@@ -65,6 +65,6 @@ li a:hover {
         
    <h2>Here is a few different ways you can help!</h2>
      
-     <img src="Way2Help.png" alt="Listt">
+     <img src="TaKNEE.png" alt="Listt">
 
 
