--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ li a:hover {
 <li><a href="Libya.html">HOME </a></li>
 <li><a href="page2.html">ABOUT</a></li>
  <li><a href="page4.html">RESOURCES</a></li>
-    <li><a href="page5.html">DONATION</a></li>
+    <li><a href="page5.html">TAKE ACTION</a></li>
   </ul>
         </body>
    
