--- a/page5.html
+++ b/page5.html
@@ -59,12 +59,12 @@ li a:hover {
         </body>
 
 
-<img src="Wives-01.png" alt="Final"/img>
+<img src="TaKNEE.png" alt="Final"/img>
 
 
         
    <h2>Here is a few different ways you can help!</h2>
      
-     <img src="TaKNEE.png" alt="Listt">
+     <img src="WAY2HELP.png" alt="Listt">
 
 
